--- a/add.html
+++ b/add.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Add item to database</h1>
-		<form action="mod.php" method="post">
+		<form action="add.php" method="post">
 			Name: <input type="text" name="name"><br/><br/>
 			
 			<!-- radio input for the type -->
